@startuml

title __LEASE_CONTRACT's Class Diagram__\n

  namespace com.vale.warehouses {
    namespace ui.lease_contract {
      class com.vale.warehouses.ui.lease_contract.AddEditLeasingContractActivity {
          {static} + LEASE_CONTRACT_ID : String
          - editSpinnerLeaseRequests : Spinner
          - editSpinnerTenant : Spinner
          - editSpinnerWarehouse : Spinner
          - editTextLeasedAt : TextInputEditText
          - editTextLeasedTill : TextInputEditText
          - editTextMonths : TextInputLayout
          - editTextTotalPrice : TextInputLayout
          - format : DateTimeFormatter
          - textLeaseRequest : TextView
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          # onCreate()
          - buildViewModels()
          - calculateTotalMonthsAndPrice()
          - finishExecution()
          - getClickListener()
          - getLeaseRequests()
          - getTenants()
          - getWarehouses()
          - saveLeasingContract()
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace ui.lease_contract {
      class com.vale.warehouses.ui.lease_contract.LeaseContractAdapter {
          {static} - DIFF_CALLBACK : ItemCallback<LeasingContract>
          + LeaseContractAdapter()
          + getLeasingContractAt()
          + onBindViewHolder()
          + onCreateViewHolder()
          + setOnItemClickListener()
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace ui.lease_contract {
      class com.vale.warehouses.ui.lease_contract.LeaseContractAdapter.LeasingContractHolder {
          - textViewAdditionalData : TextView
          - textViewAddress : TextView
          - textViewPricePerMonth : TextView
          + LeasingContractHolder()
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace ui.lease_contract {
      interface com.vale.warehouses.ui.lease_contract.LeaseContractAdapter.OnItemClickListener {
          {abstract} + onItemClick()
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace ui.lease_contract {
      class com.vale.warehouses.ui.lease_contract.LeaseContractListActivity {
          {static} + ADD_REQUEST : int
          {static} + EDIT_REQUEST : int
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          # onActivityResult()
          # onCreate()
          - getAllWarehouses()
          - logoutNow()
      }
    }
  }
  

  com.vale.warehouses.ui.lease_contract.AddEditLeasingContractActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.vale.warehouses.ui.lease_contract.AddEditLeasingContractActivity o-- com.vale.warehouses.service.model.LeasingContract : leaseContract
  com.vale.warehouses.ui.lease_contract.AddEditLeasingContractActivity o-- com.vale.warehouses.service.view_model.LeasingContractViewModel : leaseContractViewModel
  com.vale.warehouses.ui.lease_contract.AddEditLeasingContractActivity o-- com.vale.warehouses.service.view_model.LeaseRequestViewModel : leaseRequestViewModel
  com.vale.warehouses.ui.lease_contract.AddEditLeasingContractActivity o-- com.vale.warehouses.service.view_model.TenantViewModel : tenantViewModel
  com.vale.warehouses.ui.lease_contract.AddEditLeasingContractActivity o-- com.vale.warehouses.ui.lease_contract.AddEditLeasingContractActivity : that
  com.vale.warehouses.ui.lease_contract.AddEditLeasingContractActivity o-- com.vale.warehouses.service.view_model.WarehouseViewModel : warehouseViewModel
  com.vale.warehouses.ui.lease_contract.LeaseContractAdapter -up-|> androidx.recyclerview.widget.ListAdapter
  com.vale.warehouses.ui.lease_contract.LeaseContractAdapter o-- com.vale.warehouses.ui.lease_contract.LeaseContractAdapter.OnItemClickListener : listener
  com.vale.warehouses.ui.lease_contract.LeaseContractAdapter +-down- com.vale.warehouses.ui.lease_contract.LeaseContractAdapter.LeasingContractHolder
  com.vale.warehouses.ui.lease_contract.LeaseContractAdapter +-down- com.vale.warehouses.ui.lease_contract.LeaseContractAdapter.OnItemClickListener
  com.vale.warehouses.ui.lease_contract.LeaseContractAdapter.LeasingContractHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.vale.warehouses.ui.lease_contract.LeaseContractListActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.vale.warehouses.ui.lease_contract.LeaseContractListActivity o-- com.vale.warehouses.ui.lease_contract.LeaseContractAdapter : leasingContractAdapter
  com.vale.warehouses.ui.lease_contract.LeaseContractListActivity o-- com.vale.warehouses.service.view_model.LeasingContractViewModel : leasingContractViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
